<resources>
    <!--    App Name-->
    <string name="app_name">MyContacts</string>

    <!--    Auth-->
    <string name="GOOGLE" translatable="false">GOOGLE</string>
    <string name="remember_me">Remember me</string>
    <string name="register">REGISTER</string>
    <string name="or">or</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="password_error_message">Password must be 8 characters long and contain at least 1 capital, 1 small letters, 1 number and 1 special character!</string>
    <string name="email_error_message">Incorrect e-mail address!</string>
    <string name="find_out_profile_text">Find out the profile and go to the application!</string>
    <string name="agreement_text">By clicking Register you agree to our Terms and Conditions</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="sign_in_text">Sign In</string>
    <string name="acquainted">Let\'s get an acquainted</string>
    <string name="register_error_user_exist">User already exist.</string>
    <string name="register_error">Register error.</string>


    <!--    Login-->
    <string name="login_error">Wrong email or password.</string>
    <string name="hello">Hello!</string>
    <string name="enter_email_password">Enter your email and password below</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_your_password">Forgot your password?</string>

    <!--    My Profile-->
    <string name="settings">Settings</string>
    <string name="fullname">Fullname</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="edit_profile">Edit profile</string>
    <string name="go_to_settings">Go to settings and fill ou the profile</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="my_profile">My Profile</string>

    <!--    My Contacts-->
    <string name="add_contacts">Add contacts</string>
    <string name="find_button">Find button</string>
    <string name="deletedContact">Contact %s deleted.</string>
    <string name="deletedContacts">Contacts deleted.</string>
    <string name="restore">Restore</string>
    <string name="contacts">Contacts</string>
    <string name="back_arrow_navigation">Back arrow navigation</string>
    <string name="navigation_up_button">Navigation up button</string>

    <!--    User Profile-->
    <string name="profile">Profile</string>

    <!--    Add account-->
    <string name="save">SAVE</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">Email</string>
    <string name="add_photo">Add Photo</string>

    <!--    Loading screen-->
    <string name="hello_blank_fragment">Loading fragment</string>
    <string name="loading">Loading</string>
    <string name="autologin_error">"Autologin error."</string>


    <!--    Utility-->
    <string name="facebook_icon" translatable="false">Facebook icon</string>
    <string name="linkedin_icon" translatable="false">Linkedin icon</string>
    <string name="instagram_icon" translatable="false">Instagram icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="profile_photo">Profile photo</string>
    <string name="full_name">Full name</string>
    <string name="message">MESSAGE</string>
    <string name="contactphototransition" translatable="false">contactPhotoTransition</string>

<!--    -->

</resources>